Code smell updates